--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ nav .right a{
     transition: 0.3s ease;
 
 }
-nav a:hover{
+nav a:hover, .mobile a:hover{
     color: #ffffffad;
 }
 nav .right a span{
@@ -170,15 +170,13 @@ nav .right .up::before{
     color: #fff;
     margin-bottom: 20px;
 }
-button{
-    border: none;
-    background-color: transparent;
-}
 
-button a{
+
+.buttons a{
     cursor: pointer;
     padding: 15px 28px;
     display: inline-block;
+    text-align: center;
     width: 140px;
     color: #000;
     text-transform: uppercase;
@@ -203,6 +201,116 @@ button a{
 #btn-2{
     color: #fff;
     margin-left: 20px;
+}
+
+.nav{
+    display: none;
+    text-align: center;
+    position: absolute;
+    top: -100vh;
+    left: 0;
+    right: 0;
+    background: linear-gradient(#0c373ff5 97.5%, #ffffffb9 2.5% );
+    backdrop-filter: blur(15px);
+    height: 90vh;
+    width: 100%;
+    border-radius: 0 0 30px 30px;
+}
+
+.mobile a{
+    color: #fff;
+    text-transform: capitalize;
+    font-size: var(--font-h3);
+    font-weight: 600;
+    padding: 10px;
+    margin: 10px 0;
+    display: block;
+    transition: all 0.5s;
+}
+.mobile .mobile-logo{
+    text-align: left;
+    width: 100px;
+    margin-top: 25px;
+
+}
+.menu-icon{
+    display: none;
+    transition: 0.4s;
+}
+.menu-icon i:hover{
+    font-size:19px ;
+}
+.menu-icon i{
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #154D60;
+    padding: 8px;
+    transition: 0.4s;
+    border-radius: 50%;
+    backdrop-filter: blur(5px);
+}
+
+.menu-icon .close{
+    display: none;
+    
+}
+
+.user{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    
+   
+}
+.user a{
+    background-color: #aa762762;
+    border-radius: 50%;
+    padding: 10px 15px;
+    transition: 0.6s;
+    border: 1px solid transparent
+}
+
+
+.user a:hover{
+    background-color: #aa7627f3;
+    border: 2px solid #fff
+
+}
+@media (max-width:1080px){
+    nav{
+        display: none;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        transition: all 0.5s;
+    }
+      li::after{
+        content: '';
+        position: absolute;
+        width: 0;
+        color:#fff;
+        top:10;
+        margin-left: -60px;
+        margin-top: -15px;
+        height: 2px;
+        transition: 0.6s;
+        border-radius: 50%;
+        background-color:  #f7f3edf3;
+    } 
+    li:hover::after{
+        width: 19%;
+    }
+    
+    .menu-icon{
+        display: block;
+        position: fixed;
+        z-index: 1;
+        right: 50px;
+        top: 30px;
+    }
+    
 }
 
 
