--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,110 @@
-@media (max-width:1080px){
+@media(max-width:1400px){
+    .head{
+        padding: 1rem 2rem;
+        
+    }
+}
+@media(max-width:1280px){
+    :root{
+        --font-h1: 50px;
+        ---font-h2: 35px;
+        --font-h3: 24px;
+        --font-h4:18px;
+        --font-h5: 16px;
+        
+        --font-a:13px;
+        ---font-15: 13px;
+        ---font-p: 14px;
+        --font-13: 12px;
+        --footer-font-nav:18px;
+    }
+    .container{
+        padding: 1% 4%;
+    }
+    .bg-color{ 
+        height: 85vh;    
+    }
+    .content {
+        top: 25%;
+     }
+     .content h1{
+         line-height: 60px;
+         margin-bottom: 20px;
+     }
+     .content h3{
+         line-height: 30px;
+     }
+     #logo-img-slide{
+        width: 90%;
+      
+    }
+    
+    .special-bg{
+       
+        height: 50vh;
+    
+    }
+    .aboutbg{
+        
+        height: 60vh;
+       
+    
+    }
+    .contactbg{
+     
+        height: 50vh;
+       
+        
+    
+    }
+    .special-container h4{
+       
+        margin-bottom: 10px;
+    }
+    .special-container h2{
+      
+        margin-bottom: 20px;
+    }
+    .special-container p{
+       
+        line-height: 20px;
+        margin-bottom: 20px;
+    
+    }
+    #special .btn{
+       
+        margin-top: -50px;
+
+    }
+    
+}
+@media(max-width:1140px){
+    .footer-container{   
+        grid-template-columns: repeat(2, 1fr);      
+    }
+    #product-container{ 
+        grid-template-columns: repeat(3, 1fr);
+    }
+    #aside{
+        width: 30%;
+           
+    }
+    #everything-hero{
+        width: 70%;
+    }
+    #main-product-container {
+        
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
+}
+
+
+@media (max-width:980px){
+    .head .logo img{
+        width: 80px;
+       
+    }
     nav{
         display: none;
     }
@@ -26,10 +132,113 @@
     
     .menu-icon{
         display: block;
-        position: fixed;
+        position:  absolute;;
         z-index: 1;
         right: 50px;
         top: 30px;
     }
+    .queries-container{
+        
+        grid-template-columns: repeat(2, 1fr);
+       
+    }
+    #form-container{
+        flex-direction: column;
+    }
+    #about-hero-container{
+        flex-direction: column;
+        gap: 30px;
+    }
+    #about-hero-container img, 
+    #about-hero-container .about-hero-content{
+        width: 100%;
+        margin: 25px 5%;
+    }
+    #connect-container{
+     
+        grid-template-columns: repeat(2, 1fr);
+       
+    }
+    .about-hero-content h2{
+       
+        line-height: 25px;
+        margin: 4% 0;
     
+    }
+    .best-sellers-card{
+       flex-direction: column;
+      text-align: center;
+       
+    }
+    .best-sellers-card img{
+        width: 150px;
+        height: auto;
+    }
+   
+}
+@media(max-width:760px){
+    .menu-icon{
+        
+        position: absolute;
+        top: 10px;
+    }
+    :root{
+        --font-h1: 45px;
+        ---font-h2: 32px;
+        --font-h3: 22px;
+        --font-h4:16px;
+        --font-h5: 15px;
+        
+        --font-a:12.5px;
+        ---font-15: 12px;
+        ---font-p: 13px;
+        --font-13: 11.5px;
+        --footer-font-nav:16px;
+    }
+    .footer-container, 
+    #main-product-container,
+    .queries-container,
+    #connect-container,
+    #team-container .client-container
+     {   
+        grid-template-columns: 1fr;      
+    }
+    #product-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    #everything-hero{
+        width: 60%;
+        padding: 40px;
+        margin: 20px;
+    }
+    #aside{
+        width: 40%;
+    }
+    .show-sort{
+       flex-direction: column;
+       gap: 20px;
+    }
+    .special-container{
+        width: 80%;
+        
+    }
+   
+}
+@media(max-width:600px){
+    #everything-hero{
+        width: 50%;
+        padding: 20px;
+        margin: 10px;
+    }
+    #aside{
+        width: 50%;
+    }
+    .menu-icon{
+        display: block;
+        position: absolute;
+        z-index: 1;
+        right: 50px;
+        top: 10px;
+    }
 }
