--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    transition:  ease-in-out;
+    transition:all 0.4s ease-in-out;
 }
 hr{
     opacity: 0.5;
@@ -78,8 +78,10 @@ html{
 body{
     font-family: "Lato", sans-serif;
     width: 100%;
+    margin:  0 auto;
     height: auto;
     background-color: #f5efef;
+    color: #000;
 }
 /* ------============main css ==============------  */
 .container{
@@ -425,75 +427,31 @@ nav .right .up::before{
 /* ---==============header ends here ==============-------  */
 
 /* ----=================main start here====================-------  */
+.logo-img img{
+    height: 30px;
+    margin: 0 40px;
+}
 .logo-img{
-    text-align: center;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    align-items: center;
-    gap: 10px;
-    justify-content: center;
-    width: 900px;
+    white-space: nowrap;
+    animation: 25s slider infinite linear;
+}
+#logo-img-slide{
+    overflow: hidden;
+    padding: 4% 12%;
+    width: 70%;
     margin: 0 auto;
-    padding: 2% 0;
-
 }
 
-#images{
-    padding: 2% 0;
-    height: 85vh;
-
-}
-#image-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-}
-.image-card{
-    height: 400px;
-    width: 350px;
-    
-}
-.image-card img{
-    height: 400px;
-    width: 350px;
-    border-radius: 5px;
-}
-.image-card .image-content{
-    height: 400px;
-    width: 350px;
-    position: absolute;
-    padding: 30px;
-    background:rgba(0, 0, 0, 0.473);
-    margin-top: -405px;
-    color: #fff;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-.image-content h3{
-    margin-bottom: 15px;
-    font-size: var(--font-h3);
-    font-weight: 600;
-    text-transform: capitalize;
-
-}
-.image-content p{
-    margin-bottom: 20px;
-    font-size: var(---font-p);
-    font-weight: 400;
-    line-height: 25px;
-    width: 250px;
-    
+@keyframes slider{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
 }
 
-.image-content .btn{
-    display: block;
-    width: 50%;
-    text-align: center;
-    margin-bottom: 35px; 
-    
-}
+
 /* ----------------product feature --------------  */
 #product{
     width: 100%;
@@ -523,23 +481,29 @@ nav .right .up::before{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
+    align-items: center;
+    justify-content: center;
 
 }
 #product-container .product-card{
     padding: 10px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin:  0 auto;
     gap: 10px;
     background-color: rgb(247, 244, 244);
 }
 .product-card img{
     width: 300px;
     height: 220px;
+   object-fit: cover;
     transition: 0.3s;
     position: relative;
     border-radius: 3px;
 }
-.product-card img:hover{
+.product-card img:hover, 
+#main-product-card a img:hover{
     transform: scale(1.02);
 }
 .product-card .pop-btn{
@@ -553,19 +517,23 @@ nav .right .up::before{
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     position: absolute;
-    margin:15px 0 0 10px ;
+    margin-top: 15px;
+    margin-left: 20px;
+    
     font-size: var(--font-13);
     font-weight: 400;
     transition: 0.4s;
 
 }
-.pop-btn:hover{
+.pop-btn:hover,
+ #main-product-card .pop-btn:hover{
     background-color: #fff;
     color: var(---orange);
 }
 .product-content{
     
     padding: 5px;
+    
 }
 .product-content .info{
     display: block;
@@ -577,7 +545,8 @@ nav .right .up::before{
     opacity: 1;
     transition: 0.3s;
 }
-.product-content .info:hover{
+.product-content .info:hover, 
+.main-info:hover{
     opacity: 0.7;
 
 }
@@ -770,14 +739,10 @@ footer{
    
 }
 .footer-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
     width: 100%;
-    margin: 0 auto;
-    
-    gap: 20px;
-    margin: 4% 0;
     
 }
 .footer-card {
@@ -785,10 +750,7 @@ footer{
     height: auto;
     padding: 5px;
     
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: start;
-     
+   
 }
 .footer-card img{
     margin-top: 35px;
@@ -803,29 +765,40 @@ footer{
 .footer-card .footer-content-container{
     display: flex;
     justify-content: space-between;
-   
-    gap: 30px;
+    width: 100%;
+    gap: 10px;
+    
 }
 .footer-card .footer-content{
     display: flex; 
     flex-direction: column;
+    width: 100%;
+    padding: 5% 0;
+    
 }
 .font-txt{
     font-size: var(--footer-font-nav);
     text-transform: capitalize;
     color: var(---black-color);
-    margin: 30px 26px;
+    margin: 4% 10px;
+    padding: 10% 0;
     text-align: left;
+    font-size: var(--footer-font-nav);
+    font-weight: 600;
+    opacity: 0.7;
+    
 }
 .footer-content .footer-link{
     display: flex;
     flex-direction: column;
-    text-align: left;
+    text-align: center;
+    width: 100%;
     gap: 10px;
-    margin: 0 26px;
+    margin: 0 10px;
 }
 .footer-link a{
     cursor: pointer;
+    width: 100%;
     text-transform: capitalize;
     font-size: var(--font-h5);
     font-weight: 500;
@@ -833,6 +806,7 @@ footer{
     color: var(---text-color);
     opacity: 0.8;
     transition: 0.4s;
+    display: block;
 }
 .footer-link a:hover{
     color: var(---blue);
@@ -846,7 +820,7 @@ footer{
 }
 .footer-input input{
     padding: 12px 15px;
-    width: 220px;
+    width: 100%;
     outline: none;
     border: 1px solid #00000031;
     border-radius: 2px;
@@ -1251,4 +1225,322 @@ button:hover, .btn:hover{
     line-height: 28px;
     margin-bottom: 18px;
 }
+
+/* ------=====================everything HTML==========================------  */
+#everything{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 15% 10px 30px;
+    width: 100%;
+    height: auto;
+}
+.everything-container{
+   height: auto;  
+}
+#aside{
+    width: 25%;
+    height: auto;
+    padding: 20px;   
+}
+
+.search-product{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+.search-product input{
+    padding:  12px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: #fff;
+    width: 100%;
+
+}
+.search-product input::placeholder{
+    font-size: var(--font-a);
+    opacity: 0.6;
+}
+.search-product input:focus{
+    border: 1px dotted var(---deep-orange);
+}
+.search-product a{
+    background-color: #1e73be;
+    color: #fff;
+    padding: 8px;
+    margin-left: -10px;
+    border-radius: 0 3px 3px 0;
+    cursor: pointer;
+    opacity: 0.9;
+    transition: 0.4s;
+}
+.search-product a:hover{
+    opacity: 1;
+    
+}
+.filter-price{
+    margin: 8% 0;
+    width: 100%;
+
+}
+h3.everything-h3{
+    color:var(---black-color);
+    opacity: 0.7;
+    font-size: var(--font-h4);
+    font-weight: 400;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+}
+.filter-price input{
+    width: 100%;
+    height: 5px;
+    margin-bottom: 10px;
+}
+.filter-buttons{
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
+.filter-buttons a{
+    padding: 7px 15px;
+    text-align: center;
+    cursor: pointer;
+}
+.filter-buttons p{
+    text-transform: capitalize;
+    color: var(---black-color);
+    opacity: 0.7;
+}
+.filter-buttons p span{
+    font-weight: 600;
+}
+.categories{
+    margin-top: 50px;
+}
+.categories-list{
+    
+    padding: 10px 0;
+    width: 100%;
+}
+.categories-list .list-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 2px;
+    width: 100%;
+}
+.list-item a{
+    cursor: pointer;
+    text-transform: capitalize;
+    font-size: var(---font-15);
+    color: var(---black-color);
+    font-weight: 600;
+    margin: 2% 0;
+    opacity: 0.8;
+    transition: 0.4s;
+}
+.list-item a:hover{
+    opacity: 1;
+}
+.list-item p{
+    color: var(---text-color);
+
+}
+.best-sellers{
+    margin-top: 30px;
+    width: 100%;
+}
+.best-sellers-card{
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    align-items: center;
+    padding: 5% 0;
+    border-bottom : 1px solid #00000034;
+}
+.best-sellers-card img{
+    height: 75px;
+}
+.best-seller-content{
+    
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.best-seller-content a{
+    cursor: pointer;
+    text-transform: capitalize;
+    opacity: 0.9;
+    font-size: var(--font-15);
+    font-weight: 500;
+    color: #000;
+    transition: 0.3s;
+}
+.best-seller-content a:hover{
+    transform: scale(1.008);
+    opacity: 1;
+}
+.best-seller-content .star, .best-seller-content p{
+    color: var(---black-color);
+    opacity: 0.7;
+}
+
+#everything-hero{
+    width: 75%;
+    height: auto;
+    background-color: #fff;
+    padding: 75px;
+    margin: 30px;
+    color: #000;
+}
+#everything-hero a{
+    text-transform: capitalize;
+    font-size: var(--font-h5);
+    font-weight: 400;
+    cursor: pointer;
+    color: var(---black-color);
+    margin-bottom: 30px;
+    display: block;
+}
+#everything-hero a span{
+    opacity: 0.7;
+}
+.show-sort{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.show-sort p{
+    color: var(---black-color);
+    opacity: 0.8;
+    font-size: var(--font-15);
+}
+.show-sort span{
+    font-weight: 600;
+    opacity: 0.9;
+}
+.sorting{
+    max-width: 100%;    
+}
+.sorting input{
+    background-color: rgb(219, 213, 213);
+    padding: 8px 12px;
+    border: 0;
+    outline: 0;
+    border-radius: 3px;
+    color: var(---orange);
+}
+.sorting input::placeholder{
+    font-size: var(---font-15);
+    color: var(---orange);
+}
+
+#main-product{
+    margin-top: 80px;
+    width: 100%;
+}
+#main-product-container {
+    padding: 5px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+#main-product-card{
+    background-color: rgba(248, 248, 248, 0.829);
+    padding: 5px;
+   width: 100%;
+}
+#main-product-card a img{
+    height: 200px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 5px;
+    transition: 0.3s;
+    position: relative;
+}
+.main-product-content{
+    padding: 5% 0;
+}
+
+#main-product-card .pop-btn{
+    display: block;
+    position: absolute;
+    background-color: #f7f1f1e1;
+    width: 60px;
+    padding: 5px 15px;
+    border-radius: 50px;
+    text-align: center;
+    color: #000;
+    cursor: pointer;
+    font-size: var(--font-13);
+    font-weight: 400;
+    transition: 0.4s;
+    margin-top: -220px;
+    margin-left: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.main-info{
+    margin-top: -20px;
+    display: block;
+    font-size: var(---font-15);
+    font-weight: 600;
+    color: var(---black-color);
+    cursor: pointer;
+    text-transform: capitalize;
+    opacity: 1;
+    transition: 0.3s;
+}
+.main-info-text{
+    margin-top: -20px;
+    font-size: var(--font-13);
+    font-weight: 400;
+    color: var(---text-color);
+    text-transform: capitalize;
+    opacity: 0.6;
+}
+.main-price{
+    font-size: var(--font-15);
+    font-weight: 500;
+    color: var(---black-color);
+    margin: 8px 0;
+    opacity: 0.9;
+}
+.page{
+    display: flex;
+    gap: 1px;
+    padding:4% 2%;
+    margin-top: 30px;
+}
+.page a{
+    display: block;
+    
+    cursor: pointer;
+}
+.page a i{
+    color: #000;
+    
+}
+.page .page-btn{
+    background-color: transparent;
+    padding: 10px;
+    border: 1px solid #00000057;
+    transition: 0.4s; 
+    
+}
+.page .page-btn:hover{
+    background-color: rgb(211, 182, 182);
+    border: 1px solid #000;
+    
+
+}
+
 
